# Intelligent-LED-by-vela

./: CMakeLists.txt
Application/: RGB.c  RGB.h  amk_gpio.h  delay.c  delay.h  led.c  led.h  main.c  main.h  platform_systick.c  platform_systick.h  rgb_common.c  rgb_common.h  test.c  ws2812.c  ws2812.h  ws2812_gd32_pwm.c
GD32F450Z_BSP/: e4.c  e4.h  i2c.c
GD32F4xx_Firmware_Library/CMSIS/: e4.h  i2c.h
GD32F4xx_Firmware_Library/CMSIS/GD/GD32F4xx/Source/ARM/: startup_gd32f450.s
MDK-ARM/: gpio_led.uvguix.star  gpio_led.uvoptx  gpio_led.uvprojx
MDK-ARM/Listings/: gpio_led.map  startup_gd32f450_470.lst
MDK-ARM/Objects/: delay.crf  delay.d  e4.crf  e4.d  gd32f4xx_adc.crf  gd32f4xx_adc.d  gd32f4xx_can.crf  gd32f4xx_can.d  gd32f4xx_crc.crf  gd32f4xx_crc.d  gd32f4xx_ctc.crf  gd32f4xx_ctc.d  gd32f4xx_dac.crf  gd32f4xx_dac.d  gd32f4xx_dbg.crf  gd32f4xx_dbg.d  gd32f4xx_dci.crf  gd32f4xx_dci.d  gd32f4xx_dma.crf  gd32f4xx_dma.d  gd32f4xx_enet.crf  gd32f4xx_enet.d  gd32f4xx_exmc.crf  gd32f4xx_exmc.d  gd32f4xx_exti.crf  gd32f4xx_exti.d  gd32f4xx_fmc.crf  gd32f4xx_fmc.d  gd32f4xx_fwdgt.crf  gd32f4xx_fwdgt.d  gd32f4xx_gpio.crf  gd32f4xx_gpio.d  gd32f4xx_i2c.crf  gd32f4xx_i2c.d  gd32f4xx_ipa.crf  gd32f4xx_ipa.d  gd32f4xx_iref.crf  gd32f4xx_iref.d  gd32f4xx_misc.crf  gd32f4xx_misc.d  (+48 more)
